--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-al-amin-381326148/">Hire Me</a>
         </div>
        <div class="half-width">
-        <img src="images/por3.png" alt="">
+        <img class="one" src="images/por3.png" alt="">
        </div>
         </section>
         <section class="biography">
             <div class="half-width">
-                <img src="images/pro2.png" alt="">
+                <img class="two" src="images/pro2.png" alt="">
 
             </div>
             <div class="half-width">
@@ -56,7 +56,7 @@
 
         </section>
         
-            <section>
+            <section class="third">
                 <div class="client">
                     <h2>what Client are say</h2>
                 </div> 
@@ -73,8 +73,13 @@
                    <h3>mdalamin8161116@gmail.com</h3>
                 </div>
             </section>
+        
+
+
             <footer>
-                <p>@ Mohammad Alamin 2020,all rights reserved</p>
+                <div>
+                <p>@Mohammad Alamin 2020,all rights reserved</p>
+                </div>
             </footer>
             </body>
             </html>
