--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="half-width">
                 <h2>Biography</h2>
                 <p>
-                    I already learned the HTML,CSS,JAVASCRIPT and REACT.I can build any website.i can even teach anyone how to make simple website.My goal is to become a world best web developer.
+                    I already learned the HTML,CSS,JAVASCRIPT and REACT.I can build any kind of website.i can even teach anyone how to make simple website.My goal is to become a world best web developer.
                 </p>
                 <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100010959421739&sk=photos_all">Download Resume</a>
 
