--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         </section>
         
-            <section>
+            <section class="third">
                 <div class="client">
                     <h2>what Client are say</h2>
                 </div> 
