--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="middle"> 
                     <h4>Bruce Moccy</h4>
                     <h5>Founder & CE0 Alies</h5>
-                    <p>"Give the best outcome.Hard Woker and Always show the positive Attitude"</p>
+                    <p>"Give the best outcome.Hard Worker and Always show the positive Attitude"</p>
                     
                 </div>
                 <div class="contact">
